prod/force-app/main/default/objects/Probabilit_par_tape__c/Probabilit_par_tape__c.object-meta.xml
<CustomObject>
    <label>Probabilité par Étape</label>
    <nameField>
        <displayFormat>PE-{0000}</displayFormat>
        <label>Probabilité par Étape Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Probabilités par Étapes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>