prod/force-app/main/default/objects/Probabilit_par_tape__c/fields/Etape__c.field-meta.xml
<CustomField>
    <fullName>Etape__c</fullName>
    <label>Etape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunité</fullName>
            </value>
            <value>
                <fullName>Attribution</fullName>
            </value>
            <value>
                <fullName>Ouvert (Offre envoyée)</fullName>
            </value>
            <value>
                <fullName>En préparation</fullName>
            </value>
            <value>
                <fullName>Confirmé</fullName>
            </value>
            <value>
                <fullName>Exécuté</fullName>
            </value>
            <value>
                <fullName>Facturé</fullName>
            </value>
            <value>
                <fullName>Terminé</fullName>
            </value>
            <value>
                <fullName>Pas exécuté</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>