prod/force-app/main/default/objects/Probabilit_par_tape__c/fields/Soci_t_du_groupe__c.field-meta.xml
<CustomField>
    <fullName>Soci_t_du_groupe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Société du groupe</label>
    <referenceTo>Soci_t_du_groupe__c</referenceTo>
    <relationshipLabel>Probabilités par Étapes</relationshipLabel>
    <relationshipName>Probabilit_s_par_tapes</relationshipName>
    <type>Lookup</type>
</CustomField>