prod/force-app/main/default/objects/Probabilit_par_tape__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Soci_t_du_groupe__c</columns>
    <columns>Etape__c</columns>
    <columns>Probabilit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tous les étapes probabilité</label>
</ListView>